--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 #DatabaseConfiguration
 quarkus.mongodb.connection-string=mongodb://localhost:27017
-quarkus.mongodb.database=bookstore
+quarkus.mongodb.database=contract_rates
 #
 #Swagger
 quarkus.smallrye-openapi.path=/swagger
