--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,10 @@
 #DatabaseConfiguration
-quarkus.mongodb.connection-string=mongodb://localhost:27017
+#quarkus.mongodb.connection-string=mongodb://localhost:27017
 quarkus.mongodb.database=contract_rates
-#
-#Swagger
-quarkus.smallrye-openapi.path=/swagger
 
 
-#quarkus.mongodb.connection-string=mongodb://localhost:27017/?retryWrites=false
-#quarkus.mongodb.database=bookstore
 
-quarkus.mongodb.codec-registry-enabled=true
+
+quarkus.mongodb.connection-string=mongodb://localhost:27017/contract_rates?retryWrites=false
+
 
