--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,9 @@
 #DatabaseConfiguration
 #quarkus.mongodb.connection-string=mongodb://localhost:27017
-quarkus.mongodb.database=contract_rates
+#quarkus.mongodb.database=contract_rates
 quarkus.mongodb.connection-string=mongodb://localhost:27017/?retryWrites=false
 
+quarkus.mongodb.database=audit_log
 
 
 
